# simpler-whisper

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  test_simpler_whisper.py
.github/workflows/: build.yaml  release.yaml
cmake/: BuildWhispercpp.cmake
simpler_whisper/: __init__.py  whisper.py
src/: whisper_wrapper.cpp
tests/: test_wrapper.py
