[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.12", "numpy<=1.26.4"]
build-backend = "setuptools.build_meta"

[project]
name = "simpler-whisper"
dynamic = ["version"]
authors = [
    {name = "Roy Shilkrot", email = "roy.shil@gmail.com"},
]
description = "A simple Python wrapper for whisper.cpp"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/locaal-ai/simpler-whisper"
"Bug Tracker" = "https://github.com/locaal-ai/simpler-whisper/issues"

[tool.setuptools]
packages = ["simpler_whisper"]
include-package-data = true

[tool.setuptools.package-data]
simpler_whisper = ["*.dll", "*.pyd", "*.so", "*.metal"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
before-test = "pip install pytest requests"
